# Routelag

./: .firebaserc  .gitignore  README.md  RouteLag-restore-cleanup-test-plan.md  firestore.rules
.github/workflows/: dallas-beta-monitor.yml
docs/: BETA_INCIDENT_RUNBOOK.md  BETA_MONITORING.md  HUD_IDENTITY_MIGRATION.md  MAC-CLIENT.md  MULTI-HOP-ROUTING.md  PATHGEN_IDENTITY_MIGRATION.md  ROUTING-TUNNEL.md  SERVER-CLIENT-MANAGEMENT.md  SETUP.md  TROUBLESHOOTING.md  VPS-HARDENING-CHECKLIST.md  WINDOWS-CLIENT.md  ZER0_FULL_PRODUCT_LAUNCH_AUDIT_2026-07-17.md  ZER0_REBRAND_MIGRATION.md
docs/evidence/zer0-vm-2026-07-18/: failure-auth-controls.json  failure-replay-core.json  failure-summary.json
docs/legal/: ACCEPTABLE_USE_POLICY.md  DATA_INVENTORY.md  DIAGNOSTIC_AND_TELEMETRY_DISCLOSURE.md  FORTNITE_AND_THIRD_PARTY_DISCLAIMER.md  LEGAL_REVIEW_CHECKLIST.md  PLACEHOLDERS.md  PRIVACY_POLICY.md  PRIVATE_BETA_TESTER_AGREEMENT.md  README.md  TERMS_OF_SERVICE.md
overwolf-companion/: README.md  background.html  background.js  bridge.js  manifest.json  normalizer.js  overlay.html  overlay.js  settings.html  settings.js  styles.css
routelag-desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
routelag-desktop/docs/: BETA-TESTER-GUIDE.md  EMERGENCY-CLEANUP.md  TROUBLESHOOTING.md  WINDOWS-INSTALL.md  WINDOWS-QA-CHECKLIST.md
routelag-desktop/installer/: build.ps1  gen-assets.ps1  routelag-installer.nsi
routelag-desktop/installer/includes/: defines.nsh  logging.nsh  registry.nsh  ui.nsh
routelag-desktop/public/legal/: acceptable-use.md  diagnostics.md  privacy.md  routing-risk.md  terms.md
routelag-desktop/scripts/: check-engine-windows.js  tauri-command.js
routelag-desktop/src/: App.tsx  api.ts  design-system.css  main.tsx  styles.css  types.ts  vite-env.d.ts
routelag-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
routelag-desktop/src-tauri/capabilities/: default.json
routelag-desktop/src-tauri/engine/windows/: README.md
routelag-desktop/src-tauri/engine/windows/LICENSES/: NOTICE.txt  README.md
routelag-desktop/src-tauri/icons/: icon.icns
routelag-desktop/src-tauri/src/: beta_report.rs  cleanup.rs  config.rs  diagnostics.rs  elevation.rs  export.rs  external_url.rs  health.rs  hud_bridge.rs  hud_layout.rs  hud_overlay.rs  install_info.rs  lib.rs  logs.rs  main.rs  network.rs  network_diag.rs  replay_import.rs  route_lag_engine.rs  route_session.rs  startup.rs  sysinfo.rs  tester_profile.rs  tunnel.rs  windows_process.rs
routelag-desktop/src/components/: AdminModal.tsx  AppSidebar.tsx  BetaConsentGate.tsx  ConnectButton.tsx  DiagnosticsCards.tsx  DragHeader.tsx  GameRow.tsx  GlowButton.tsx  GlowLogo.tsx  LegalDocModal.tsx  LegalLinks.tsx  LogsPanel.tsx  Sidebar.tsx  (+13 more)
routelag-hud/: package-lock.json  package.json  tsconfig.json  tsconfig.preload.json  vite.config.ts
routelag-installer/: README.md  index.html  package-lock.json  package.json  vite.config.ts
routelag-installer/installer/: dev-manifest.json
routelag-installer/packaging/: build-installer.ps1  create-test-payloads.ps1  inspect-artifact-safety.ps1  inspect-payload.ps1
routelag-installer/src/: App.tsx  fonts.css  main.tsx  styles.css
routelag-installer/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
routelag-installer/src-tauri/capabilities/: default.json
routelag-installer/src-tauri/icons/: icon.icns
routelag-installer/src-tauri/src/: downloader.rs  elevate.rs  fs_ops.rs  install_engine.rs  install_manifest.rs  lib.rs  logging.rs  network_cleanup.rs  payload.rs  process_kill.rs  registry.rs  shortcuts.rs  spec.rs  uninstall_engine.rs  verifier.rs
scripts/: 00-check-server.sh  01-install-node.sh  01-install-server.sh  02-create-client.sh  03-status.sh  04-uninstall.sh  analyze-pcapng.mjs  beta-dallas-alert.mjs  beta-dallas-monitor.mjs  beta-uptime-probe.sh  deploy-ashburn-to-dallas.mjs  deploy-server-to-dallas.mjs  lib.sh  peek-pcapng.mjs  remote-ssh.mjs  remote-upload.mjs
server/: .env.example  package-lock.json  package.json
server/src/: app.ts  auth.ts  config.ts  hostResources.ts  index.ts  nodes.ts  opsMetrics.ts  peerManager.ts  peersStore.ts  runtimeControls.ts  store.ts
server/tests/: app.test.ts  entitlement.test.ts  ops-controls.test.ts
(+112 files in other folders)
