[package]
name = "routelag-desktop"
version = "0.2.1"
description = "Zer0 - targeted routing app"
authors = ["Zer0"]
edition = "2021"

[lib]
name = "routelag_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "routelag-desktop"
path = "src/main.rs"

[features]
default = ["custom-protocol"]
# Required for production builds that embed the frontend (frontendDist) instead of
# loading the Vite dev server. `tauri build` enables this automatically; bare
# `cargo build` does not, so we enable it by default and packaging always uses it.
custom-protocol = ["tauri/custom-protocol"]
disable-hud = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "multipart", "rustls-tls"], default-features = false }
zip = "2"
rand = "0.8"
sha2 = "0.10"
url = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
